[project]
name = "zendfi-sdk"
version = "0.1.0"
description = "Python SDK for ZendFi (payments, customers, invoices, webhooks)"
authors = [{name = "ZendFi"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["payments", "sdk", "zendfi"]
requires-python = ">=3.8"
dependencies = [
  "requests>=2.28",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
retry = ["tenacity>=8.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
